[gd_scene load_steps=2 format=3 uid="uid://dfjfym5basaxr"]

[ext_resource type="Script" path="res://scenes/world/tavern/tavern_hub.gd" id="1_kcufq"]

[node name="TavernHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kcufq")

[node name="ActivityContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ActivityContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Customers" type="Button" parent="ActivityContainer/VBoxContainer"]
layout_mode = 2
text = "Talk to Customers
"

[node name="Stock" type="Button" parent="ActivityContainer/VBoxContainer"]
layout_mode = 2
text = "Check Stock"

[node name="MakeOrder" type="Button" parent="ActivityContainer/VBoxContainer"]
layout_mode = 2
text = "Make an Order"

[node name="MakePotion" type="Button" parent="ActivityContainer/VBoxContainer"]
layout_mode = 2
text = "Make a Potion"

[node name="CloseShop" type="Button" parent="ActivityContainer/VBoxContainer"]
layout_mode = 2
text = "Close Up for the Day"

[node name="StatContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="StatContainer"]
layout_mode = 2

[node name="Time" type="Label" parent="StatContainer/VBoxContainer"]
layout_mode = 2
text = "Time:"

[node name="Day" type="Label" parent="StatContainer/VBoxContainer"]
layout_mode = 2
text = "Day:"

[node name="Fame" type="Label" parent="StatContainer/VBoxContainer"]
layout_mode = 2
text = "Fame:"

[node name="Money" type="Label" parent="StatContainer/VBoxContainer"]
layout_mode = 2
text = "Money:"
